<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/clDetailContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarDetailContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_450dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarDetailContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorDarkGrey"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgPosterDetailBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorDarkGrey"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        tools:src="@drawable/poster" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:background="@color/colorBlack20"
                        app:layout_collapseMode="parallax"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgPosterDetail"
                        android:layout_width="@dimen/dimen_200dp"
                        android:layout_height="@dimen/dimen_300dp"
                        android:background="@color/colorLightGrey"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/poster" />

                    <ProgressBar
                        android:id="@+id/pbPosterDetail"
                        android:layout_width="@dimen/dimen_100dp"
                        android:layout_height="@dimen/dimen_100dp"
                        app:layout_constraintBottom_toBottomOf="@id/imgPosterDetail"
                        app:layout_constraintEnd_toEndOf="@id/imgPosterDetail"
                        app:layout_constraintStart_toStartOf="@id/imgPosterDetail"
                        app:layout_constraintTop_toTopOf="@id/imgPosterDetail" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detailToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/bg_gradient_black"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_collapseMode="pin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:navigationIcon="@drawable/ic_back_white"
                    app:titleTextAppearance="@style/JetpackAndroidTitleToolbar"
                    app:titleTextColor="@color/colorWhiteTwo" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsvDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlackTwo"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    style="@style/JetpackAndroidText.Bold.White"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_marginStart="@dimen/dimen_24dp"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_marginEnd="@dimen/dimen_24dp"
                    android:textSize="@dimen/text_size_18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/sample_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelRating"
                    style="@style/JetpackAndroidText.Bold.White"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:text="@string/label_rating"
                    android:textSize="@dimen/text_size_14sp"
                    app:layout_constraintStart_toStartOf="@id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgRating"
                    android:layout_width="@dimen/dimen_16dp"
                    android:layout_height="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:src="@drawable/ic_star"
                    app:layout_constraintStart_toStartOf="@id/tvLabelRating"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelRating" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRating"
                    style="@style/JetpackAndroidText.White"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:layout_marginTop="@dimen/dimen_2dp"
                    android:textSize="@dimen/text_size_12sp"
                    app:layout_constraintBottom_toBottomOf="@id/imgRating"
                    app:layout_constraintStart_toEndOf="@id/imgRating"
                    app:layout_constraintTop_toTopOf="@id/imgRating"
                    tools:text="@string/sample_rating" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="@dimen/dimen_1dp"
                    android:layout_height="@dimen/dimen_0dp"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:background="@color/colorWhiteTwo"
                    app:layout_constraintBottom_toBottomOf="@id/tvReleaseDate"
                    app:layout_constraintStart_toEndOf="@id/tvRating"
                    app:layout_constraintTop_toTopOf="@id/tvLabelRating" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelReleaseDate"
                    style="@style/JetpackAndroidText.Bold.White"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:text="@string/label_release_date"
                    android:textSize="@dimen/text_size_14sp"
                    app:layout_constraintStart_toEndOf="@id/separator"
                    app:layout_constraintTop_toTopOf="@id/tvLabelRating" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReleaseDate"
                    style="@style/JetpackAndroidText.White"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_marginEnd="@dimen/dimen_24dp"
                    android:textSize="@dimen/text_size_12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvLabelReleaseDate"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelReleaseDate"
                    tools:text="12 January 2021" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLabelOverview"
                    style="@style/JetpackAndroidText.Bold.White"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_marginTop="@dimen/dimen_32dp"
                    android:text="@string/label_overview"
                    android:textSize="@dimen/text_size_14sp"
                    app:layout_constraintStart_toStartOf="@id/tvLabelRating"
                    app:layout_constraintTop_toBottomOf="@id/tvReleaseDate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvOverview"
                    style="@style/JetpackAndroidText.White"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:layout_marginEnd="@dimen/dimen_24dp"
                    android:textSize="@dimen/text_size_12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tvLabelOverview"
                    app:layout_constraintTop_toBottomOf="@id/tvLabelOverview"
                    tools:text="@string/sample_overview" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupContentDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="imgRating, tvTitle, tvReleaseDate, tvLabelReleaseDate, tvRating, tvLabelRating, tvOverview, tvLabelOverview"/>

                <ProgressBar
                    android:id="@+id/pbDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/dimen_50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:contentDescription="@string/description_favorite_button"
        app:backgroundTint="@color/colorDarkGrey"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite"
        app:tint="@color/colorRed" />

</androidx.constraintlayout.widget.ConstraintLayout>