<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackTwo"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/bg_rectangle_white_12"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/dimen_8dp"
        android:hint="@string/hint_search_movie_here"
        android:imeOptions="actionDone"
        android:lines="1"
        android:maxLines="1"
        android:padding="@dimen/dimen_8dp"
        android:singleLine="true"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edtMovie"
        android:layout_marginTop="8dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:paddingBottom="@dimen/dimen_8dp"
        tools:listitem="@layout/item_content" />

    <ProgressBar
        android:id="@+id/pbMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>