...
            android:layout_height="wrap_content"
            android:text="@string/label_movies" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tv_shows" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpHome"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlHome" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnMyFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_18dp"
        android:layout_marginBottom="@dimen/dimen_18dp"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
...
